syntax = "proto3";

option go_package = "./;protos";
package app;

message ForceOffline {
  message Request {
    string token = 1;
    string deviceId = 2;
    string offlineDeviceId = 4;
  }
  message Response {}
}

message OnForceOffline {
  message Request {}
  message Response {}
}